@@ -4,9 +4,9 @@ import java.io.IOException;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.bouncycastle.util.encoders.Base64;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
+import java.util.Base64;
+
 
 public class SM4Utils {
 	private String secretKey = "";
@@ -34,7 +34,7 @@ public class SM4Utils {
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_enc(ctx, keyBytes);
 			byte[] encrypted = sm4.sm4_crypt_ecb(ctx, plainText.getBytes("GBK"));
-			String cipherText = new BASE64Encoder().encode(encrypted);
+			String cipherText = Base64.getEncoder().encodeToString(encrypted);
 			if (cipherText != null && cipherText.trim().length() > 0) {
 				Pattern p = Pattern.compile("\\s*|\t|\r|\n");
 				Matcher m = p.matcher(cipherText);
@@ -63,7 +63,7 @@ public class SM4Utils {
 			
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_dec(ctx, keyBytes);
-			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, new BASE64Decoder().decodeBuffer(cipherText));
+			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, Base64.getDecoder().decode(cipherText));
 			return new String(decrypted, "GBK");
 		} 
 		catch (Exception e) {
@@ -91,7 +91,7 @@ public class SM4Utils {
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_enc(ctx, keyBytes);
 			byte[] encrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, plainText.getBytes("GBK"));
-			String cipherText = new BASE64Encoder().encode(encrypted);
+			String cipherText = Base64.getEncoder().encodeToString(encrypted);
 			if (cipherText != null && cipherText.trim().length() > 0) {
 				Pattern p = Pattern.compile("\\s*|\t|\r|\n");
 				Matcher m = p.matcher(cipherText);
@@ -123,7 +123,7 @@ public class SM4Utils {
 			
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_dec(ctx, keyBytes);
-			byte[] decrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, new BASE64Decoder().decodeBuffer(cipherText));
+			byte[] decrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, Base64.getDecoder().decode(cipherText));
 			return new String(decrypted, "GBK");
 		} catch (Exception e) {
 			e.printStackTrace();
